--- a/ReactJS/src/pages/Home.css
+++ b/ReactJS/src/pages/Home.css
@@ -11,7 +11,7 @@
     margin-left: 10%;
     margin-right: 10%;
 }
-.category, .advertising, .top-deals, .trending{
+.category, .top-deals, .trending{
     background-color: #ffffff;
     padding: 20px;
 }
@@ -32,4 +32,5 @@
 .archive-section{
     align-content: flex-start;
     background-color: #ebebeb;
+
 }
