--- a/ReactJS/src/pages/Home.css
+++ b/ReactJS/src/pages/Home.css
@@ -19,7 +19,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 100px;
+    height: max-content;
     margin-left: 7%;
     margin-right: 7%;
 }
